# mcp-sandbox

./: .envrc.template  .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  PRODUCTION.md
src/mcp_sandbox/: __init__.py
src/mcp_sandbox/client/: __init__.py  app.py  chat.py  metrics.py  session.py
src/mcp_sandbox/server/: __init__.py  __main__.py  app.py  database.py  tools.py
tests/: __init__.py  conftest.py  test_client.py  test_main.py  test_server.py
